[project]
name = "autoeis"
dynamic = ["version"]
description = "A tool for automated EIS analysis by proposing statistically plausible ECMs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Runze Zhang", email = "runzee.zhang@mail.utoronto.ca" },
    { name = "Amin Sadeghi", email = "amin.sadeghi@live.com" },
    { name = "Robert Black", email = "robert.black@nrc-cnrc.gc.ca" },
    { name = "Jason Hattrick-Simpers", email = "jason.hattrick.simpers@utoronto.ca" },
]
maintainers = [{ name = "Amin Sadeghi", email = "amin.sadeghi@live.com" }]
keywords = [
    "bayesian inference",
    "electrochemical impedance spectroscopy",
    "equivalent circuit model",
    "evolutionary algorithm",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "arviz",
    "click",
    "dill",
    "impedance",
    "ipython",
    "ipykernel",
    "ipywidgets",
    "jax",
    "julia",
    "juliacall==0.9.18",
    "juliapkg",
    "matplotlib",
    "mpire[dill]",
    "numpy",
    "numpyro",
    "pandas",
    "psutil",
    "pyparsing>=3",
    "rich",
    "scikit-learn>=1.4",
    "seaborn",
    "tqdm",
    "multiprocess",
    "jinja2>=3.1.2",
]
[project.optional-dependencies]
build = ["hatch"]
test = ["pytest", "nbmake"]
doc = [
    "furo",
    "linkify-it-py",
    "myst-parser",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-autodoc2",
]
[project.urls]
"Homepage" = "https://github.com/AUTODIAL/AutoEIS"
Repository = "https://github.com/AUTODIAL/AutoEIS"
"Bug Tracker" = "https://github.com/AUTODIAL/AutoEIS/issues"
Documentation = "https://autodial.github.io/AutoEIS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "hatch>=1.9.4",
    "furo>=2024.1.29",
    "linkify-it-py>=2.0.3",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autodoc2>=0.5.0",
    "nbmake>=1.5.3",
]

[tool.hatch.version]
path = "src/autoeis/version.py"

[tool.hatch.build.targets.sdist]
include = ["src/autoeis"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
python_files = "*.py"
python_classes = "*Test"
python_functions = "test_*"
testpaths = ["tests", "integration"]
norecursedirs = [".git", ".github", ".ipynb_checkpoints", "build", "dist"]

[tool.ruff]
exclude = [".git", ".github", ".venv", "build"]
line-length = 92
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
